Fix: ScrollBar design on Windows

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -173,3 +173,15 @@
 .text-sideways {
   writing-mode: vertical-rl;
 }
+
+/* For Chrome, Edge, Safari */
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-track {
+  background: #00000000;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 6px;
+}
